--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,6 +29,10 @@ h2 {
 	font-size: 64px;
 }
 
+h4 {
+	font-size: 48px;
+}
+
 p {
 	font-weight: normal;
 	font-size: 16px;
@@ -107,7 +111,7 @@ p {
 }
 
 .logo {
-	max-height:40px;
+	max-height: 40px;
 }
 
 nav ul {
@@ -133,6 +137,45 @@ nav a {
 	transition: all 100ms ease-in-out;
 }
 
+footer {
+	margin: 60px 0;
+}
+
+footer .contact-box {
+	background: var(--secondary-color);
+	padding: 30px 120px;
+	border-radius: 10px;
+}
+
+footer .contact-box p {
+	margin: 0;
+}
+
+footer .email-link {
+	text-decoration: none;
+	color: black;
+	font-size: 24px;
+}
+
+footer .email-link:hover {
+	color: var(--branding-color);
+}
+
+footer .social-links a {
+	margin: 0 20px;
+	color: var(--branding-color);
+	background: var(--secondary-color);
+	padding: 10px 14px;
+	font-size: 18px;
+	border-radius: 50%;
+}
+
+footer .social-links a:hover {
+	color: white;
+	background: var(--branding-color);
+	transition: all 100ms ease-in-out;
+}
+
 @media (max-width: 900px) {
 	h1 {
 		font-size: 44px;
@@ -141,6 +184,10 @@ nav a {
 
 	h2 {
 		font-size: 44px;
+	}
+
+	h4 {
+		font: 26px;
 	}
 
 	.hero {
@@ -157,7 +204,7 @@ nav a {
 		text-align: center;
 	}
 
-  nav a {
-    font-size: 14px
-  }
+	nav a {
+		font-size: 14px;
+	}
 }
