--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -114,6 +114,10 @@ p {
 	max-height: 40px;
 }
 
+nav {
+	padding: 20px 0;
+}
+
 nav ul {
 	padding: 0;
 	margin: 0;
@@ -123,7 +127,7 @@ nav li {
 	display: inline;
 	list-style: none;
 	line-height: 42px;
-	margin-left: 10px;
+	margin-left: 15px;
 }
 
 nav a:hover,
@@ -168,18 +172,19 @@ footer .social-links a {
 	padding: 10px 14px;
 	font-size: 18px;
 	border-radius: 50%;
+	transition: all 100ms ease-in-out;
 }
 
 footer .social-links a:hover {
 	color: white;
 	background: var(--branding-color);
-	transition: all 100ms ease-in-out;
+	
 }
 
 @media (max-width: 900px) {
 	h1 {
 		font-size: 44px;
-		line-height: 56px;
+		line-height: 1.5;
 	}
 
 	h2 {
