--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,14 @@
 :root {
-	--branding-color: #6c63ff;
-	--secondary-color: #f9f7fe;
+	--branding-color: #ceab93;
+
+	--secondary-color: #f7e5d0;
 	--heading-font-family: "Playfair Display", serif;
 	--default-font-family: "Poppins", sans-serif;
 }
 
 body {
 	font-family: var(--default-font-family);
+	background-color: rgb(255, 249, 237);
 }
 
 h1,
@@ -15,8 +17,8 @@ h3,
 h4,
 h5,
 h6 {
-	color: black;
 	font-family: var(--heading-font-family);
+	color: var(--primary-color);
 	font-weight: bold;
 }
 
@@ -39,20 +41,24 @@ p {
 	line-height: 30px;
 }
 
-.hero {
+li {
+	list-style-type: none;
+}
+
+.main-hero {
 	background: var(--secondary-color);
 	text-align: center;
 	padding: 80px 20px;
 }
 
-.hero p {
+.main-hero p {
 	font-size: 36px;
 	font-weight: bold;
 	margin: 0;
 	color: #272142;
 }
 
-.hero h2 {
+.main-hero h2 {
 	font-family: var(--heading-font-family);
 	font-weight: normal;
 	line-height: 1.5;
@@ -114,6 +120,9 @@ p {
 	max-height: 40px;
 }
 
+.skills-icon {
+	max-width: 50%;
+}
 nav {
 	padding: 20px 0;
 }
@@ -169,16 +178,18 @@ footer .social-links a {
 	margin: 0 20px;
 	color: var(--branding-color);
 	background: var(--secondary-color);
-	padding: 10px 14px;
+	padding: 10px 15px;
 	font-size: 18px;
 	border-radius: 50%;
 	transition: all 100ms ease-in-out;
 }
 
 footer .social-links a:hover {
-	color: white;
+	color: var(--secondary-color);
 	background: var(--branding-color);
 }
+
+/* Media queries */
 
 @media (max-width: 900px) {
 	h1 {
@@ -194,7 +205,7 @@ footer .social-links a:hover {
 		font: 26px;
 	}
 
-	.hero {
+	.main-hero {
 		padding: 80px 20px;
 	}
 
