--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,7 +9,6 @@
 
 body {
 	font-family: var(--default-font-family);
-	background-color: rgb(255, 249, 237);
 }
 
 h1,
@@ -129,6 +128,48 @@ a {
 	position: relative;
 	left: 40%;
 }
+
+.col-sm-4 {
+	position: relative;
+}
+
+.image-container {
+	position: relative;
+	display: inline-block;
+}
+
+.image-container:hover .overlay {
+	bottom: 0;
+	height: 100%;
+	opacity: 1;
+}
+
+.overlay {
+	background-color: #ceab93;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	transition: all 0.4s ease-in-out;
+}
+
+.overlay-text {
+	position: absolute;
+	padding: 0;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	white-space: nowrap;
+}
+
+.overlay-text a {
+	color: #ffeddb;
+	font-size: 24px;
+}
+
 nav {
 	padding: 20px 0;
 }
