--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,12 +3,14 @@
 	--branding-color: #ceab93;
 	--secondary-color: #f7e5d0;
 	--para-color: #a4907c;
+	--background-color: #fff7f0;
 	--heading-font-family: "Playfair Display", serif;
 	--default-font-family: "Poppins", sans-serif;
 }
 
 body {
 	font-family: var(--default-font-family);
+	background-color: #fff7f0;
 }
 
 h1,
@@ -170,6 +172,18 @@ a {
 	font-size: 24px;
 }
 
+.right-rounded {
+	border-top-right-radius: 450px;
+	position: relative;
+	left: -50px;
+}
+
+.left-rounded {
+	border-top-left-radius: 450px;
+	position: relative;
+	right: -50px;
+}
+
 nav {
 	padding: 20px 0;
 }
@@ -234,6 +248,20 @@ footer .social-links a {
 footer .social-links a:hover {
 	color: var(--secondary-color);
 	background: var(--branding-color);
+}
+
+/* My Story Page */
+
+.my-story {
+	margin: 200px 0;
+	color: var(--background-color);
+	-webkit-text-stroke: 2px #ceab93;
+	font-size: 100px;
+
+}
+
+.about-me-images {
+	background-color: var(--branding-color);
 }
 
 /* Media queries */
