--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,13 +4,13 @@
 	--secondary-color: #f7e5d0;
 	--para-color: #a4907c;
 	--background-color: #fff7f0;
-	--heading-font-family: "Playfair Display", serif;
+	--heading-font-family: "Boston Angel", serif;
 	--default-font-family: "Poppins", sans-serif;
 }
 
 body {
 	font-family: var(--default-font-family);
-	background-color: #fff7f0;
+	background-color: var(--background-color);
 }
 
 h1,
@@ -52,24 +52,9 @@ a {
 	text-decoration: none;
 }
 
-.main-hero {
-	background: #f1dec9;
-	text-align: center;
-	padding: 80px 20px;
-}
-
-.main-hero p {
-	font-size: 36px;
-	font-weight: bold;
-	margin: 0;
-	color: #272142;
-}
-
-.main-hero h2 {
-	font-family: var(--heading-font-family);
-	font-weight: normal;
-	line-height: 1.5;
-	font-size: 24px;
+.logo {
+	position: relative;
+	left: 30px;
 }
 
 .content-container {
@@ -117,9 +102,7 @@ a {
 	padding: 120px 60px;
 }
 
-.logo {
-	max-height: 40px;
-}
+
 
 .skills-icon {
 	max-width: 50%;
@@ -184,30 +167,25 @@ a {
 	right: -50px;
 }
 
-nav {
-	padding: 20px 0;
+.navbar {
+	background: var(--background-color) !important;
 }
 
-nav ul {
-	padding: 0;
-	margin: 0;
-}
-
-nav li {
-	display: inline;
-	list-style: none;
-	line-height: 42px;
-	margin-left: 15px;
+.nav-link{
+	color: #825c41 !important;
 }
 
 nav a:hover,
-nav li.active a {
-	color: var(--branding-color);
+nav a.active  {
+	color: var(--branding-color) !important;
+	
 }
+
 
 nav a {
 	text-decoration: none;
-	color: #272142;
+	color: var(--heading-color
+	);
 	transition: all 100ms ease-in-out;
 }
 
@@ -247,21 +225,17 @@ footer .social-links a {
 
 footer .social-links a:hover {
 	color: var(--secondary-color);
-	background: var(--branding-color);
+	background: #edcdbb;
 }
 
-/* My Story Page */
-
-.my-story {
-	margin: 200px 0;
-	color: var(--background-color);
-	-webkit-text-stroke: 2px #ceab93;
-	font-size: 100px;
-
+.contact {
+	text-align: center;
+	padding: 100px 25px 50px 25px;
 }
+.contact-links {
 
-.about-me-images {
-	background-color: var(--branding-color);
+	color: var(--branding-color);
+	margin-bottom: 30px;
 }
 
 /* Media queries */
