--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -248,36 +248,7 @@ hr {
 	color: var(--branding-color);
 }
 
-/* Media queries */
 
-@media (max-width: 992px) {
-	h1 {
-		font-size: 44px;
-		line-height: 1.5;
-	}
-
-	h2 {
-		font-size: 44px;
-	}
-
-	h4 {
-		font: 26px;
-	}
-
-	.main-hero {
-		padding: 80px 20px;
-	}
-
-	.content {
-		text-align: center;
-		padding: 0;
-	}
-
-
-	nav a {
-		font-size: 14px;
-	}
-}
 
 /* Responsiveness for phone */
 
@@ -294,7 +265,9 @@ hr {
 		font-size: 25px;
 	}
 
-
+	.overlay-text a {
+		font-size: 16px;
+	}
 
 	
 }
